--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,15 +1,135 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+body {
+  margin: 0;
+  padding: 20px;
+}
+
+h1,
+h2 {
+  text-align: center;
+}
+
+.user-list {
+  padding: 0 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.user-box,
+.user-profile-box {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  color: #000;
+  text-decoration: none;
+}
+
+.user-post-box {
+  padding: 10px;
+  color: #000;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  text-decoration: none;
+}
+
+.user-box:hover,
+.user-post-box:hover {
+  background: #ccc;
+}
+
+.user-avatar {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+
+.user-summary {
+  width: 100%;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+}
+
+.user-bio {
+  padding: 10px;
+  border: 1px solid #ccc;
+}
+
+.user-box:hover .user-summary {
+  border: none;
+}
+
+.user-post-count {
+  font-weight: 700;
+  font-size: 0.9rem;
+  display: flex;
+  justify-content: end;
+}
+
+.user-profile {
+  padding: 0 20px;
+}
+
+.user-profile,
+.user-post-list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.see-btn {
+  margin: auto;
+  color: #000;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+}
+
+.see-btn:hover {
+  background: #ccc;
+  border: none;
+}
+
+.comment-box {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.comment {
+  display: flex;
+  gap: 20px;
+}
+
+.comment-avatar {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+}
+
+.comment-card {
+  padding: 0 5px;
+  width: 100%;
+  border-radius: 10px;
+  background: #eee;
+}
+
+.comment-details {
+  font-weight: 800;
+}
+
+.post-box {
+  padding: 20px;
+}
+
+.seperator {
+  padding: 0 10px;
+}
+
+.author {
+  font-weight: 400;
+  font-size: 1.3rem;
+}
