--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -40,6 +40,7 @@ h2 {
 .user-avatar {
   width: 100px;
   height: 100px;
+  border-radius: 50%;
 }
 
 .user-summary {
@@ -76,7 +77,8 @@ h2 {
   gap: 20px;
 }
 
-.see-btn {
+.see-btn,
+.post-btn {
   margin: auto;
   color: #000;
   font-weight: 700;
@@ -84,11 +86,102 @@ h2 {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .see-btn:hover {
   background: #ccc;
-  border: none;
+}
+
+.post-btn {
+  color: #379237;
+  background: #fff;
+  border: 1px solid #379237;
+  cursor: pointer;
+}
+
+.post-btn:hover {
+  color: #fff;
+  background: #379237;
+}
+
+.like-btn {
+  margin: 0 20px 0 auto;
+  color: #3b44f6;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 10px;
+  border: 1px solid #3b44f6;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.like-btn:hover {
+  color: #fff;
+  background: #3b44f6;
+}
+
+.commit-btn {
+  margin: 0 0 0 auto;
+  color: #2e2f30;
+  font-weight: 700;
+  text-decoration: none;
+  padding: 10px;
+  border: 1px solid #2e2f30;
+  border-radius: 8px;
+  background: #fff;
+  cursor: pointer;
+}
+
+.commit-btn:hover {
+  color: #fff;
+  background: #2e2f30;
+}
+
+.add-comment-box {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.add-comment-text-box,
+.input {
+  width: 90%;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  padding: 10px;
+  outline: none;
+}
+
+.add-comment-text-box:focus,
+.input:focus {
+  border: 1px solid #555;
+  background: #eee;
+  outline: none;
+}
+
+.like-form {
+  display: flex;
+}
+
+.comment-form {
+  display: flex;
+  flex-direction: column;
+  background: #e0e0e040;
+  padding: 20px;
+}
+
+.post-form {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.title-box,
+.text-box {
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
 }
 
 .comment-box {
