--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -8,12 +8,12 @@
     <p><%= @post.text %></p>
     <%= render "likes/add_like"%>
     <div class="comment-box">
-        <% @post.comments.each do |comment| %>
+        <% @post.comments.includes(:author).each do |comment| %>
             <div class="comment">
-                <img class="comment-avatar" src=<%= User.find(comment.author_id).photo %> alt=<%= User.find(comment.author_id).name %>>
+                <img class="comment-avatar" src=<%= comment.author.photo %> alt=<%= comment.author.name %>>
                 <div class="comment-card">
                     <p class="comment-details">
-                        <span><%= User.find(comment.author_id).name %></span>
+                        <span><%= comment.author.name %></span>
                         <span  class="seperator">||</span>
                         <span><%= comment.created_at %></span>
                     </p>
