Add view device view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <%= render "layouts/header" %>
     <p class="notice text-success"><%= notice %></p>
     <p class="alert text-danger"><%= alert %></p>
     <%= yield %>
